@@ -114,3 +114,6 @@ Release 0.23.3 - Unreleased
 
     YARN-68. NodeManager will refuse to shutdown indefinitely due to container
     log aggregation (daryn via bobby)
+
+    YARN-87. NM ResourceLocalizationService does not set permissions of local 
+    cache directories (Jason Lowe via tgraves)
